Edit Services + appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ProjectstoreDatabaseSettings": {
+    "ProjectsCollectionName": "Projects",
+    "PipelinesCollectionName": "Pipelines",
+    "UsersCollectionName": "Users",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "ProjectstoreDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
