--- a/VueJSAspNetCoreWeb.csproj
+++ b/VueJSAspNetCoreWeb.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4" />
     <PackageReference Include="MongoDB.Driver" Version="2.10.4" />
     <PackageReference Include="MongoDB.Driver.GridFS" Version="2.10.4" />
     <PackageReference Include="VueCliMiddleware" Version="3.0.0" />
